123
emplateSyntaxError

jinja2.exceptions.TemplateSyntaxError: unexpected '}'
Traceback (most recent call last)

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/app.py", line 1498, in __call__

    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/app.py", line 1476, in wsgi_app

    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/app.py", line 1473, in wsgi_app

    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/app.py", line 882, in full_dispatch_request

    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/app.py", line 880, in full_dispatch_request

    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/app.py", line 865, in dispatch_request

    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/WORK1/app/views.py", line 10, in index

    return render_template('home.html')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/templating.py", line 150, in render_template

    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/flask/templating.py", line 131, in _render

    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/jinja2/environment.py", line 1304, in render

    self.environment.handle_exception()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception

    raise rewrite_traceback_stack(source=source)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/WORK1/app/templates/home.html", line 1, in top-level template code

    {% extends "base.html" %}

    File "/uolstore/home/student_lnxhome01/sc22hl/flask/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception

    raise rewrite_traceback_stack(source=source)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    File "/uolstore/home/student_lnxhome01/sc22hl/WORK1/app/templates/base.html", line 58, in template

    <a href="{{ url_for('log.html') }" class="btn btn-success">Login / Sign up</a>

    jinja2.exceptions.TemplateSyntaxError: unexpected '}'

The debugger caught an exception in your WSGI application. You can now look at the traceback which led to the error.

To switch between the interactive traceback and the plaintext one, you can click on the "Traceback" headline. From the text traceback you can also create a paste of it. For code execution mouse-over the frame you want to debug and click on the console icon on the right side.

You can execute arbitrary Python code in the stack frames and there are some extra helpers available for introspection:

    dump() shows all variables in the frame
    dump(obj) dumps all that's known about the object

